customize social icons to FIGMA

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="title">
             Hello <br />
             I am Yared
-            
+
         </div>
         <div class="my-job">I’am a Software Developer.</div>
         <div class="intro">
@@ -39,27 +39,24 @@
             <ul class="list">
                 <li>
                     <a class="social-item" href="#">
-                        <i class="fa fa-github"></i>
+                        <img src="images/Github.png" alt="github">
                     </a>
                 </li>
                 <li>
                     <a class="social-item" href="#">
-                        <i class="fa fa-linkedin"></i>
-                    </a>
+                        <img src="images/Link.png" alt="link"> </a>
                 </li>
                 <li>
                     <a class="social-item" href="#">
-                        <i class="fa fa-angellist"></i>
-                    </a>
+                        <img src="images/Angelist.png" alt="Angelist"> </a>
                 </li>
                 <li>
                     <a class="social-item" href="#">
-                        <i class="fa fa-twitter"></i>
-                    </a>
+                        <img src="images/Twitter.png" alt="twitter"> </a>
                 </li>
                 <li>
                     <a class="social-item" href="#">
-                        <i class="fa fa-medium"></i>
+                        <img src="images/Medium.png" alt="medium"> </a>
                     </a>
                 </li>
             </ul>
